--- a/portfolio/static/portfolio/custom.css
+++ b/portfolio/static/portfolio/custom.css
@@ -13,7 +13,9 @@ body {
 #blogtitle {
     font-size: 6rem;
 }
-
+.imagecontainer:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 @media (min-width: 992px) {
     #hometext {
         font-size: 4rem;
