--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -16,16 +16,16 @@
 
   <link rel="icon" type="image/png" href="{% static "portfolio/Logo.png" %}">
 
-  <title>Nick Walter</title>
+  <title>Harsh Ranjan</title>
 </head>
 
-<body>
+<body >
 
   <nav id="topNav" class="navbar navbar-expand-md navbar-light">
-    <div class="container">
+    <div class="container" >
       <a class="navbar-brand" href="{% url 'home' %}">
         <img src="{% static "portfolio/Logo.png" %}" width="30" height="30" class="d-inline-block align-top" alt="Nick's Logo">
-        <span>Nick Walter</span>
+        <span>Harsh Ranjan</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,16 +33,16 @@
       <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% static "portfolio/resume.pdf" %}">Resume</a>
+            <a class="nav-link" href="{% static "portfolio/Resume_Harsh_MSCRM.pdf" %}">Resume</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/nick-walter/" target="_blank">LinkedIn</a>
+            <a class="nav-link" href="https://www.linkedin.com/in/harshlive/" target="_blank">LinkedIn</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://twitter.com/ZappyCode" target="_blank">Twitter</a>
+            <a class="nav-link" href="https://github.com/harshlive/" target="_blank">GitHub</a>
           </li>
           <li>
-            <a role="button" href="{% url 'blog:all_blogs' %}" class="btn btn-primary">Blog</a>
+            <a role="button" href="{% url 'blog:all_blogs' %}" class="btn btn-primary">Blogs</a>
           </li>
         </ul>
       </div>
