--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -6,13 +6,13 @@
 
 <div class="row justify-content-center my-3">
   <div class="col-5">
-    <img src="{% static 'portfolio/SquareBlonde.jpg' %}" class="img-fluid">
+    <img src="{% static 'portfolio/home.jpg' %}" class="img-fluid" style="border-radius: 250px;">
   </div>
 </div>
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h1 id="hometext" class="font-weight-bold">Nick Walter is Commander-in-Chief at ZappyCode and lives in Downtown Tokyo 😊</h1>
+    <h1 id="hometext" class="font-weight-bold"><span style="color: blue;">Harsh Ranjan</span> <br>is a Software Developer and lives in <span style="color: red;">Dhanbad</h1>
   </div>
 </div>
 
@@ -23,12 +23,15 @@
   <div class="col-lg-4 col-md-6">
 
     {% if project.url %}
+    <div class = "imagecontainer" style="text-align: center;border-radius: 10px;margin-bottom: 20px;">
     <a href="{{ project.url }}">
-      <img src="{{ project.image.url }}" class="img-fluid mb-2">
+      <img src="{{ project.image.url }}" class="img-fluid mb-2" style="width:300px;height: 120px;border-radius: 30px;padding: 5px;">
     </a>
+    </div>
     {% else %}
-
-    <img src="{{ project.image.url }}" class="img-fluid mb-2">
+    <div class = "imagecontainer" style="text-align: center;border-radius: 10px;margin-bottom: 20px;">  
+    <img src="{{ project.image.url }}" class="img-fluid mb-2" style="width:300px;height: 100px;border-radius: 30px;padding: 5px;">
+    </div>
     {% endif %}
     <h3>{{ project.title }}</h3>
     <p>{{ project.description }}</p>
