added down animation to home img

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -10,7 +10,7 @@
     <span class="heading-primary-main">
       <img src="{% static 'portfolio/home.jpg' %}" class="img-fluid" width="350" height="350" style="border-radius: 250px;box-shadow: 0 20px 30px rgba(0, 0, 0, .6);margin-bottom: 20px;">
     </span>
-      <span class="heading-primary-main"><span style="color: white;">Harsh Ranjan</span></span>
+      <span class="heading-primary-img"><span style="color: white;">Harsh Ranjan</span></span>
       <span class="heading-primary-sub">is a Software Developer and lives in <span>Dhanbad</span></span>
   </h1>
   <a href="{% url 'blog:all_blogs' %}" class="bttn btn-white btn-animated">See Blogs</a>
