--- a/portfolio/static/portfolio/homecustom.css
+++ b/portfolio/static/portfolio/homecustom.css
@@ -63,6 +63,18 @@ body {
     animation-iteration-count: 3;
     */
 }
+.heading-primary-img {
+    display: block;
+    font-size: 30px;
+    font-weight: 400;
+    letter-spacing: 25px;
+    animation: moveDownImg 1s;
+    /*
+    animation-delay: 3s;
+    animation-iteration-count: 3;
+    */
+}
+
 .heading-primary-sub {
     display: block;
     font-size: 20px;
@@ -100,6 +112,19 @@ body {
     0% {
         opacity: 0;
         transform: translateY(50px);
+    }
+    80% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+@keyframes moveDownImg {
+    0% {
+        opacity: 0;
+        transform: translateY(-20px);
     }
     80% {
         opacity: 0.5;
