--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -16,18 +16,43 @@
   <a href="{% url 'blog:all_blogs' %}" class="bttn btn-white btn-animated">See Blogs</a>
 </div>
 </header>
-<!-- <div class="row justify-content-center my-3">
-  <div class="col-5">
-    <img src="{% static 'portfolio/home.jpg' %}" class="img-fluid" style="border-radius: 250px;">
-  </div>
-</div> -->
 
-<!-- <div class="row justify-content-center mb-3">
-  <div class="col-md-9 text-center">
-     <h1 id="hometext" class="font-weight-bold"><span style="color: blue;">Harsh Ranjan</span> <br>is a Software Developer and lives in <span style="color: red;">Dhanbad</span> 😎</h1> 
+<div class="header" style="clip-path: polygon(0 25vh,100% 0,100% 75vh,0 100%);background-image: linear-gradient(to right ,#e7a831d5,#e95b08a4) , url(/static/portfolio//portfolioimg.jpg);">
+  <div class="text-box" style="margin-top: 80px;">
+  <h1 class="heading-primary">
+      <span class="heading-primary-main">Portfolio</span>
+      <hr>
+      
+  </h1>
+  <div class="row">
+    {% for project in projects %}
+    <div class="col-lg-4 col-md-6">
+  
+      {% if project.url %}
+      <div class = "imagecontainer" style="text-align: center;border-radius: 10px;margin-bottom: 20px;">
+      <a href="{{ project.url }}">
+        <img src="{{ project.image.url }}" class="img-fluid mb-2" style="width:300px;height: 120px;border-radius: 10px;padding: 5px;">
+      </a>
+      </div>
+      {% else %}
+      <div class = "imagecontainer" style="text-align: center;border-radius: 10px;margin-bottom: 20px;">  
+      <img src="{{ project.image.url }}" class="img-fluid mb-2" style="width:300px;height: 100px;border-radius: 30px;padding: 5px;">
+      </div>
+      {% endif %}
+      <h3>{{ project.title }}</h3>
+      <p>{{ project.description }}</p>
+  
+    </div>
+    {% endfor %}
   </div>
-</div> -->
+  
+</div>
+</div>
 
+
+
+
+<!-- 
 <h2 class="mt-5">Portfolio</h2>
 <hr>
 <div class="row">
@@ -50,6 +75,6 @@
 
   </div>
   {% endfor %}
-</div>
+</div> -->
 
 {% endblock %}
