removed space between two sections

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -17,7 +17,7 @@
 </div>
 </header>
 
-<div class="header" style="clip-path: polygon(0 25vh,100% 0,100% 75vh,0 100%);background-image: linear-gradient(to right ,#e7a831d5,#e95b08a4) , url(/static/portfolio//portfolioimg.jpg);">
+<div class="header" style="clip-path: polygon(0 20vh,100% 0,100% 75vh,0 100%);background-image: linear-gradient(to right ,#e7a831d5,#e95b08a4) , url(/static/portfolio//portfolioimg.jpg);margin-top:-110px">
   <div class="text-box" style="margin-top: 80px;">
   <h1 class="heading-primary">
       <span class="heading-primary-main">Portfolio</span>
