--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -18,13 +18,13 @@
 </header>
 
 <div class="header" style="clip-path: polygon(0 20vh,100% 0,100% 75vh,0 100%);background-image: linear-gradient(to right ,#e7a831d5,#e95b08a4) , url(/static/portfolio/portfolioimg.jpg);margin-top:-110px">
-  <div class="text-box" style="margin-top: 80px;">
+  <div class="text-box" style="margin-top: 80px;width: 95%;">
   <h1 class="heading-primary">
       <span class="heading-primary-main">Portfolio</span>
       <hr>
       
   </h1>
-  <div class="row">
+  <div class="row" >
     {% for project in projects %}
     <div class="col-lg-4 col-md-6">
   
